# mva-npm3D-tp6

./: LICENSE  README.md  pyproject.toml
src/tp6/: main.py
src/tp6/data/: dataset.py  paths.py  ply.py
src/tp6/models/: pointnet.py
